# substrate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  SPEC.md  cli.py  mcp_server.py  one-pager.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: concepts.md  contributing.md  dashboard.md  faq.md  index.md  install.md  pre-authored-prompts.md  quickstart.md  use-cases.md
docs/integrations/: claude-code.md  codex.md  continue.md  cursor.md  zed.md
landing/: index.html  styles.css
landing/blog/: 2026-05-substrate-and-context-rich-agents.md
scripts/: smoke.sh
tests/: test_add_command.py  test_helpers.py  test_mcp_server.py
