[project]
name = "substrate"
version = "0.1.0"
description = "Local prompt+context bundles with git-backed versioning."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6",
    "rich>=13",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
substrate = "cli:app"
substrate-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["cli.py", "mcp_server.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]
