[project]
name = "substrate-kb"
version = "0.2.0"
description = "Lightweight, injectable knowledge bundles for AI agents. Git-versioned markdown, MCP-native, lives in your filesystem."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sidharth Satapathy", email = "sidharth.satapathy5@gmail.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "knowledge-base",
    "prompt-engineering",
    "claude",
    "cursor",
    "cli",
    "markdown",
    "git",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6",
    "rich>=13",
    "mcp>=1.0",
    "markdown-it-py>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
substrate = "cli:app"
substrate-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/xlreon/substrate"
Repository = "https://github.com/xlreon/substrate"
Issues = "https://github.com/xlreon/substrate/issues"
Changelog = "https://github.com/xlreon/substrate/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["cli.py", "mcp_server.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length — long template strings are easier left as-is
]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic pattern is `arg: T = typer.Option(...)`, which triggers B008.
"cli.py" = ["B008"]
"tests/*" = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
